[metadata]
name = leo-cli
version = 0.3.6
description = leo.org command line tool
author = Johannes Degn
author_email = joi@degn.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joidegn/leo-cli
project_urls =
    Bug Tracker = https://github.com/joidegn/leo-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
scripts = leo

[options.entry_points]
console_scripts =
    main = leo:main
